press section mobile height fix

--- a/public/src/scss/custom.scss
+++ b/public/src/scss/custom.scss
@@ -1242,7 +1242,7 @@ $fullwidth : 100%;
 		}
 	}
 	.mp-logo{
-		height: 75px;
+		height: 95px;
 		.mp-logo-wrapper{
 			.mp-logo-box{
 				img{
